Improve posts and add newsletter-form.html and support for dark background of code etc .